[package]
name = "sleigh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0"
futures = "0.3"
serde = "1.0.151"
async-trait = "0.1.60"
lazy_static = "1.4.0"
bincode = "1.3.3"
rand = "0.8.5"
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6.1"
